--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "button-panel-installer",
-	"version": "1.5.0-latest",
+	"version": "1.5.1-alpha",
 	"description": "Painel de botões para sistemas de senha.",
 	"main": "src/main.js",
 	"scripts": {
