[master] - Lançamento  latest - Correção modal mensagem de aviso

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "button-panel-installer",
-	"version": "1.5.1-beta",
+	"version": "1.5.1-latest",
 	"description": "Painel de botões para sistemas de senha.",
 	"main": "src/main.js",
 	"scripts": {
